# Automatic-Music-Transcriber

./: .gitignore  README.md  basic-pitch-test.py  pyproject.toml  transcribe.sh
