[project]
name = "automatic-music-transcriber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "basic-pitch>=0.4.0",
    "demucs>=4.0.1",
    "librosa>=0.11.0",
    "numpy<2",
    "setuptools<82",
    "torchcodec>=0.13.0",
]
